samples/_failures_safe/1761143954_62fff5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4960aeac.c: In function ‘main’:
./samples/SAFE/__tmp_4960aeac.c:183:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  183 |     const int max
      |     ^~~~~
./samples/SAFE/__tmp_4960aeac.c:183:5: error: expected declaration or statement at end of input
